--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,5 @@ include AUTHORS CHANGES LICENSE VERSION
 include MANIFEST.in
 include *.rst
 include *.txt
-recursive-include respond_model/templates *
-recursive-include respond_model/static *
+recursive-include respond_africa/templates *
+recursive-include respond_africa/static *
