--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
 envlist =
-    py{37,38,39}-dj{30,31,dev}-{mysql},
+    py{38,39}-dj{30,31,dev}-{mysql},
     lint
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38, lint
     3.9: py39
 
@@ -19,7 +18,7 @@ DJANGO =
 ignore = E226,E302,E41,F401,W503,W605
 max-complexity = 10
 max-line-length = 95
-exclude = __init__.py,respond_africa/migrations/*,respond_africa/tests/*
+exclude = __init__.py,respond_*/migrations/*,respond_*/tests/*
 
 [testenv]
 deps =
@@ -41,6 +40,6 @@ commands =
 [testenv:lint]
 deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
 commands =
-    isort --profile=black --check --diff respond_africa runtests.py setup.py --skip respond_africa/migrations/
-    black --check --diff respond_africa runtests.py setup.py
-    flake8 respond_africa
+    isort --profile=black --check --diff --src respond_admin respond_forms respond_labs respond_models respond_test_app runtests.py setup.py --skip respond_africa/migrations/
+    black --check --diff respond_admin respond_forms respond_labs respond_models respond_test_app runtests.py setup.py
+    flake8 respond_forms respond_labs respond_models respond_test_app
