--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
-    py{38,39}-dj{30,31,dev}-{mysql},
+    py{38,39}-dj{32}-{mysql}-edc{supported},
+    py{38,39}-dj{32,dev}-{mysql}-edc{dev},
     lint
 
 [gh-actions]
@@ -10,7 +11,6 @@ python =
 
 [gh-actions:env]
 DJANGO =
-    3.1: dj31
     3.2: dj32
     dev: djdev
 
@@ -18,28 +18,27 @@ DJANGO =
 ignore = E226,E302,E41,F401,W503,W605
 max-complexity = 10
 max-line-length = 95
-exclude = __init__.py,respond_*/migrations/*,respond_*/tests/*
+exclude = __init__.py,respond_africa_*/migrations/*,respond_africa_*/tests/*
 
 [testenv]
 deps =
-    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/coverage.txt
     -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/tox.txt
-    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
-    dj31: Django>=3.1,<3.2
+    -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/test_utils.txt
+    edcsupported: -r requirements.txt
+    edcdev: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
     dj32: Django>=3.2,<3.3
-    djdev: https://github.com/django/django/tarball/master
+    djdev: https://github.com/django/django/tarball/main
     mysql: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
 
 commands =
-    pip install -U pip
-    pip install -U git+https://github.com/clinicedc/edc-test-utils@develop
-    pip install -U git+https://github.com/erikvw/django-import-export@get_export_admin_action
+    pip --version
+    pip freeze
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
 
 [testenv:lint]
 deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
 commands =
-    isort --profile=black --check --diff --src respond_admin respond_forms respond_labs respond_models respond_test_app runtests.py setup.py --skip respond_africa/migrations/
-    black --check --diff respond_admin respond_forms respond_labs respond_models respond_test_app runtests.py setup.py
-    flake8 respond_forms respond_labs respond_models respond_test_app
+    isort --profile=black --check --diff respond_africa_edc runtests.py setup.py --skip respond_africa/migrations/
+    black --check --diff respond_africa_edc runtests.py setup.py
+    flake8 respond_africa_edc
