--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.8', '3.9']
-        django-version: ['3.1', '3.2']
+        django-version: ['3.2', 'dev']
 
     services:
 
