tox, gh-actions

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ DJANGO =
 ignore = E226,E302,E41,F401,W503,W605
 max-complexity = 10
 max-line-length = 95
-exclude = __init__.py,respond_africa_*/migrations/*,respond_africa_*/tests/*
+exclude = __init__.py,respond_*/migrations/*,respond_*/tests/*
 
 [testenv]
 deps =
@@ -39,6 +39,6 @@ commands =
 [testenv:lint]
 deps = -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/lint.txt
 commands =
-    isort --profile=black --check --diff respond_africa_edc runtests.py setup.py --skip respond_africa/migrations/
-    black --check --diff respond_africa_edc runtests.py setup.py
+    isort --profile=black --check --diff respond_africa runtests.py setup.py --skip respond_africa/migrations/
+    black --check --diff respond_africa runtests.py setup.py
     flake8 respond_africa_edc
