--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,11 @@ deps =
     mysql: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
 
 commands =
-    pip --version
+    pip install -U pip
     pip freeze
+    edcdev: pip install -U git+https://github.com/erikvw/django-import-export.git@get_export_admin_action
+    edcdev: pip install -U git+https://github.com/yprez/django-logentry-admin.git@master
+    edcdev: pip install -U git+https://github.com/jazzband/django-defender.git@master
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
 
