--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{38,39}-dj{32}-{mysql}-edc{supported},
-    py{38,39}-dj{32,dev}-{mysql}-edc{dev},
+;    py{38,39}-dj{32,dev}-{mysql}-edc{dev},
     lint
 
 [gh-actions]
@@ -11,7 +11,7 @@ python =
 
 [gh-actions:env]
 DJANGO =
-    3.2: dj32
+    3.2: dj32, lint
     dev: djdev
 
 [flake8]
