--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/test_utils.txt
     edcsupported: -r requirements.txt
     edcdev: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/edc.txt
-    edcdev: django-multisite  # temporary until added to requirements.tests/edc.txt
+    edcdev: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/third_party_dev.txt
     dj32: Django>=3.2,<3.3
     djdev: https://github.com/django/django/tarball/main
     mysql: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
@@ -34,9 +34,6 @@ deps =
 commands =
     pip install -U pip
     pip freeze
-    edcdev: pip install -U git+https://github.com/erikvw/django-import-export.git@get_export_admin_action
-    edcdev: pip install -U git+https://github.com/yprez/django-logentry-admin.git@master
-    edcdev: pip install -U git+https://github.com/jazzband/django-defender.git@master
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
 
