Remove 'multisite' from test runner's installed apps list

--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ deps =
     mysql: -r https://raw.githubusercontent.com/clinicedc/edc/develop/requirements.tests/mysql.txt
 
 commands =
-    pip install -U pip
+    pip --version
     pip freeze
     mysql: coverage run -a runtests.py --database=mysql
     coverage report
