--- a/tox.ini
+++ b/tox.ini
@@ -15,7 +15,7 @@ DJANGO =
     dev: djdev
 EDC_CODEBASE =
     Supported: edcsupported, lint
-    Dev: edcdev
+    Develop: edcdev
 
 [flake8]
 ignore = E226,E302,E41,F401,W503,W605
