--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         codebase: ['Supported', 'Develop']
         django-version: ['3.2', 'dev']
-        python-version: ['3.8', '3.9']
+        python-version: ['3.9']
         exclude:
           - codebase: 'Supported'
             django-version: 'dev'
