upgrdae edc version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,45 @@
+[metadata]
+name = respond-africa
+version = attr: _version
+author = Erik van Widenfelt
+author_email = ew2789@gmail.com
+url = https://github.com/respond-africa/respond-africa
+license = GPL license, see LICENSE
+description = "Old classes for the respond-africa specific clinicedc/edc"
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+keywords = django edc respond africa, clinicedc, clinical trials
+classifiers=
+    Environment :: Web Environment
+    Framework :: Django
+    Framework :: Django :: 3.2
+    Intended Audience :: Developers
+    Intended Audience :: Science/Research
+    Operating System :: OS Independent
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+
+
+[options]
+python_requires = >=3.9
+zip_safe = False
+include_package_data = True
+packages = find:
+install_requires = 
+  edc>=0.3.93
+
+[options.packages.find]
+exclude =
+    examples*
+    tools*
+    docs*
+    bin*
+    inte_edc.tests*
+
 [flake8]
-ignore = E226,E302,E41,F401,W503
+ignore = E226,W503,E203
 max-line-length = 95
 max-complexity = 10
-exclude = respond_africa/migrations/*
-
+exclude = */migrations,.tox,.git,__pycache__,build,dist,.eggs
+per-file-ignores = __init__.py: F401
